[gd_scene load_steps=12 format=3 uid="uid://cdcdrlbsf1sba"]

[ext_resource type="PackedScene" uid="uid://dmvqgryigpp0p" path="res://scenes/gui.tscn" id="1_oh3hc"]
[ext_resource type="PackedScene" uid="uid://cbro0ni0g4paj" path="res://scenes/pencil.tscn" id="2_let6m"]
[ext_resource type="Texture2D" uid="uid://sqdtw4jks3tf" path="res://icons/tile.png" id="3_y0lly"]
[ext_resource type="Script" path="res://scripts/stage.gd" id="4_7vxrc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_epcmr"]
sky_top_color = Color(1, 1, 1, 1)
sky_horizon_color = Color(0.964622, 0.953699, 0.941262, 1)
ground_bottom_color = Color(0.858486, 0.814794, 0.76505, 1)
ground_horizon_color = Color(0.964622, 0.953699, 0.941262, 1)

[sub_resource type="Sky" id="Sky_c6w72"]
sky_material = SubResource("ProceduralSkyMaterial_epcmr")

[sub_resource type="Environment" id="Environment_e52ie"]
background_mode = 2
sky = SubResource("Sky_c6w72")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_nsyg1"]
vertices = PackedVector3Array(-24.5, 0.999996, -24.5, -24.5, 0.999996, 24.5, 24.5, 0.999996, 24.5, 24.5, 0.999996, -24.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.5
cell_height = 0.5
agent_radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gaf8g"]
albedo_texture = ExtResource("3_y0lly")
uv1_scale = Vector3(20, 20, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_1lbop"]
material = SubResource("StandardMaterial3D_gaf8g")
size = Vector2(50, 50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ufopk"]
data = PackedVector3Array(25, 0, 25, -25, 0, 25, 25, 0, -25, -25, 0, 25, -25, 0, -25, 25, 0, -25)

[node name="Scene" type="Node3D"]

[node name="GUI" parent="." instance=ExtResource("1_oh3hc")]
offset_right = 42.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e52ie")

[node name="Pencil" parent="." instance=ExtResource("2_let6m")]
transform = Transform3D(1.01384, 0, 0, 0, 1.01384, 0, 0, 0, 1.01384, 0, 1, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_nsyg1")

[node name="Stage" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.8147e-06, 0)
mesh = SubResource("PlaneMesh_1lbop")
skeleton = NodePath("")
script = ExtResource("4_7vxrc")

[node name="Canvas" type="Sprite3D" parent="NavigationRegion3D/Stage" groups=["ground"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
layers = 2
axis = 1

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/Stage" groups=["ground"]]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Stage/StaticBody3D" groups=["ground"]]
shape = SubResource("ConcavePolygonShape3D_ufopk")

[node name="Erasers" type="Node" parent="NavigationRegion3D/Stage"]

[node name="Bullets" type="Node" parent="NavigationRegion3D/Stage"]

[node name="Powerups" type="Node" parent="NavigationRegion3D/Stage"]

[node name="TextureUpdateTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="InvulnurableTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="TextureUpdateTimer" to="NavigationRegion3D/Stage" method="_on_texture_update_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="NavigationRegion3D/Stage" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="InvulnurableTimer" to="NavigationRegion3D/Stage" method="_on_invulnurable_timer_timeout"]
